--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Stasik</title>
 </head>
 <body>
 
-<h1>Hello</h1>
+<h1>Hello, I'am Stasik</h1>
 
 </body>
 </html>
