--- a/index.html
+++ b/index.html
@@ -2,11 +2,47 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Stasik</title>
+    <title>McKinley</title>
+
+    <style>
+        *{
+            overflow-x: hidden;
+        }
+        body{
+            background: url("https://raw.githubusercontent.com/SochavaAG/example-mycode/master/pens/10usd.gif");
+            width: 100%;
+
+        }
+        main{
+            background: url("https://raw.githubusercontent.com/SochavaAG/example-mycode/master/pens/10usd.gif");
+            height: 100vh;
+            width: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+        .main_box{
+            width: 100%;
+            height: 100%;
+        }
+        video{
+            width: 100%;
+            height: 100%;
+        }
+
+    </style>
 </head>
 <body>
 
-<h1>Hello, I'am Stasik</h1>
+
+<main>
+
+
+            <div class="main_box">
+                <video autoplay="autoplay" muted="muted"  src="2024-11-02%2013.34.53.mp4"></video>
+            </div>
+</main>
+
 
 </body>
 </html>
